Footer now display correctly on smaller displays

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -87,10 +87,10 @@ nav {
 }
 
 footer {
-	height: 5.5vh;
+	height: 50px;
 
 	li {
-		line-height: 5.5vh;
+		line-height: 50px;
 	}
 }
 
@@ -123,7 +123,7 @@ li {
 
 @media only screen and (max-width: 30em) {
 	footer {
-		height: 10vh;
+		height: 75px;
 
 		ul {
 			display: block;
